@@ -10,7 +10,7 @@ binmode(STDOUT, ':utf8');
 binmode(STDERR, ':utf8');
 # We must declare in advance how many tests we are going to perform.
 # There are currently three tests per tagset driver.
-use Test::More tests => 42*3;
+use Test::More tests => 43*3;
 use Lingua::Interset qw(get_driver_object);
 use Lingua::Interset::Tagset;
 
@@ -43,7 +43,7 @@ my @tagsets =
     'nl::cgn', 'nl::conll',
     'no::conll',
     'pl::ipipan',
-    'pt::cintil',
+    'pt::cintil', 'pt::conll',
     'sv::mamba', 'sv::conll', 'sv::parole', 'sv::suc'
 );
 foreach my $tagset (@tagsets)
